# OpenWAM

./: .env.example  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BMW_E46_M3_VANOS_Implementation_Guide.md  BMW_E46_M3_VANOS_Overlap_Calculation_Specification.md  CMakeCache.txt  CMakeLists.native.txt  CMakeLists.txt  CMakeLists_wasm.txt  CodeSummary.txt  FUTURE_DEVELOPMENT.md  OpenWAM.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  api.py  build_log.txt  build_wasm.sh  cmake_install.cmake  debug_overlap_calculation.py  debug_vanos.py  debug_vanos_values.py  debug_ve_calculation.py  jest.config.js  package-lock.json  package.json  playwright.config.ts  test_bmw_simulator.py  test_graph_data_structure.py  test_graph_display.py  test_graph_fix.py  test_real_vanos.py  test_real_vanos_simulation.py  test_reference_script_comparison.py  test_rpm_sweep_api.py  test_tps_values.py  test_valve_config.py  test_valve_timing_chart.py  test_valve_timing_detailed.py  (+6 more)
Source/: CMakeLists.txt  OpenWAM.cpp  OpenWAM.vcxproj  OpenWAM.vcxproj.filters  TCGestorWAM.h  TOpenWAM.cpp  TOpenWAM.h  TTimeControl.cpp  TestBuilder.cpp  build_error.md  cmake_install.cmake  concentric_lines.txt  dpf_lines.txt  errors.md  output_log.txt  output_log_2.txt  wasm_wrapper.cpp
Source/1DPipes/: 1DPipes.vcxproj  1DPipes.vcxproj.filters  TTubo.cpp  TTubo.h  cmake_install.cmake
Source/Act/: ACT_Sub_DLL.cpp  Act.vcxproj  Act.vcxproj.filters  INJECTION_RATE.cpp  cmake_install.cmake
Source/Boundaries/: Boundaries.vcxproj  Boundaries.vcxproj.filters  TCCCilindro.cpp  TCCCilindro.h  TCCCompresor.cpp  TCCCompresor.h  TCCCompresorVolumetrico.cpp  TCCCompresorVolumetrico.h  TCCDeposito.cpp  TCCDeposito.h  TCCDescargaExtremoAbierto.cpp  TCCDescargaExtremoAbierto.h  TCCEntradaCompresor.cpp  TCCEntradaCompresor.h  TCCExternalConnection.cpp  TCCExternalConnection.h  TCCExternalConnectionVol.cpp  TCCExternalConnectionVol.h  TCCExtremoAnecoico.cpp  TCCExtremoCerrado.cpp  TCCExtremoInyeccion.cpp  TCCExtremoInyeccion.h  TCCPerdidadePresion.cpp  TCCPerdidadePresion.h  TCCPreVble.cpp  TCCPreVble.h  TCCPulso.cpp  TCCPulso.h  TCCRamificacion.cpp  TCCRamificacion.h  TCCUnionEntreDepositos.cpp  TCCUnionEntreDepositos.h  TCCUnionEntreTubos.cpp  TCCUnionEntreTubos.h  TCFDConnection.cpp  TCFDConnection.h  TCondicionContorno.cpp  TCondicionContorno.h  TEntradaPulso.cpp  TEntradaPulso.h  (+1 more)
Source/Concentric Pipe/: TConcentrico.h  TConcentricoDPF.h  TConcentricoTubos.h
Source/Connections/: Connections.vcxproj  Connections.vcxproj.filters  TCDExterno.cpp  TCDExterno.h  TCDFijo.cpp  TCDFijo.h  TDiscoRotativo.cpp  TDiscoRotativo.h  TEstatorTurbina.cpp  TEstatorTurbina.h  TLamina.cpp  TLamina.h  TLumbrera.cpp  TLumbrera.h  TMariposa.cpp  TMariposa.h  TRotorTurbina.cpp  TRotorTurbina.h  TTipoValvula.cpp  TTipoValvula.h  TValvula4T.cpp  TValvula4T.h  TValvulaContr.cpp  TValvulaContr.h  TWasteGate.cpp  TWasteGate.h  cmake_install.cmake
Source/Control/: CMakeLists.txt  Control.vcxproj  Control.vcxproj.filters  TController.h  TDecisor.cpp  TDecisor.h  TGain.cpp  TGain.h  TPIDController.cpp  TPIDController.h  TSensor.cpp  TSensor.h  TTable.cpp  TTable.h  TTable1D.cpp  TTable1D.h  cmake_install.cmake
Source/DPF/: CMakeLists.txt  DPF.vcxproj  DPF.vcxproj.filters  TCanalDPF.h  TDPF.cpp  TDPF.h  cmake_install.cmake
Source/Engine/: Engine.vcxproj  Engine.vcxproj.filters  TBloqueMotor.cpp  TBloqueMotor.h  TCilindro.cpp  TCilindro.h  TCilindro2T.cpp  TCilindro4T.cpp  cmake_install.cmake
Source/Includes/: Globales.h
Source/Labels/: Labels.vcxproj  Labels.vcxproj.filters  cmake_install.cmake
Source/Math_wam/: Math_wam.vcxproj  Math_wam.vcxproj.filters  cmake_install.cmake
Source/ODModels/: ODModels.vcxproj  ODModels.vcxproj.filters  TDepVolCte.cpp  TDepVolVariable.cpp  TDepVolVariable.h  TDeposito.cpp  TDeposito.h  TIsoSpeedLine.cpp  TIsoSpeedLine.h  TTurbPosition.cpp  TTurbPosition.h  TTurbina.cpp  TTurbina.h  TTurbinaSimple.cpp  TTurbinaSimple.h  TTurbinaTwin.cpp  TTurbinaTwin.h  TTurbineMap.cpp  TTurbineMap.h  TUnionDireccional.cpp  TUnionDireccional.h  TVenturi.cpp  TVenturi.h  cmake_install.cmake
Source/Output/: Output.vcxproj  Output.vcxproj.filters  TOutputResults.cpp  TOutputResults.h  cmake_install.cmake
Source/Turbocompressor/: TCompTubDep.cpp  TCompTubDep.h  TCompTubos.cpp  TCompTubos.h  TCompresor.cpp  TCompresor.h  TCompresorDep.cpp  TCompresorDep.h  TCompressorMap.h  TEjeTurbogrupo.cpp  TEjeTurbogrupo.h  TMapaComp.cpp  TMapaComp.h  TMapaComp2Tub.cpp  TMapaComp2Tub.h  TNewMapComp.cpp  TNewMapComp.h  TSAEMap.cpp  TSAEMap.h  Turbocompressor.vcxproj  Turbocompressor.vcxproj.filters  cmake_install.cmake
Source/Wrappers/: Wrappers.vcxproj  Wrappers.vcxproj.filters  (+1 more)
(+813 files in other folders)
